--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,6 +1,3 @@
-header {
-}
-
 /*Nav start*/
 
 .navigation {
@@ -36,6 +33,27 @@ header {
 	cursor: pointer;
 }
 
+.nav-link {
+	color: grey;
+	position: relative;
+	padding: 0px 0px 0px 45px;
+}
+
+.nav-link:hover {
+	color: #000;
+}
+
+.nav-link:hover::before {
+	content: '';
+	position: absolute;
+	left: 14px;
+	top: 50%; margin-top: -1px;
+	width: 20px;
+	height: 2px;
+	background-color: #000;
+}
+
+
 .search-icon {
 	margin-left: 50px;
 	height: 20px;
@@ -43,23 +61,10 @@ header {
 	cursor: pointer;
 }
 
-.line {
-	width: 20px;
-	height: 2px;
-	margin-right: 15px;
-	margin-left: 15px;
-}
 
 /*Nav end*/
 
 /*Slider start*/
-
-
-
-body {
-	margin: 0;
-	padding: 0;
-}
 
 #block-for-slider {
 
