--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -131,11 +131,20 @@
 
 .post-content {
 	text-overflow: ellipsis; /* will make [...] at the end */
-    height: 130px; /* change to your preferences */
-    white-space: wrap; /* paragraph to one line */
-    overflow:hidden; /* older browsers */
-    font-size: 14px;
-    margin-bottom: 50px;
+	height: 130px; /* change to your preferences */
+	white-space: wrap; /* paragraph to one line */
+	overflow:hidden; /* older browsers */
+	font-size: 14px;
+	margin-bottom: 50px;
+	margin-top: 35px;
+}
+
+.post-v2 .post-content {
+	height: 65px;
+}
+
+.post-v2 .post-title {
+	margin-top: 0px;
 }
 
 .post-func {
@@ -144,8 +153,51 @@
 	font-size: 13px;
 	font-weight: 900;
 	color: #cccccc;
+	/*margin-top: 35px;*/
 }
 
+.post-img img {
+	width: 100%;
+}
+
+.post-img {
+	position: relative;
+}
+
+.post-img .post {
+	position: absolute;
+	top:0px;
+	opacity: 0.85;
+	background-color: #232323;
+	display: none;
+	height: 100%;
+}
+
+.post-img .post-content {
+	height: 65px;
+	color: white;
+}
+
+.post-img .post-title {
+	color: white;
+}
+
+.video {
+	margin-bottom: 35px;
+}
+
+.plyr__control--overlaid {
+	background-color: #666666;
+}
+
+.plyr__control--overlaid svg {
+	left: 8px;
+}
+
+.plyr button {
+    width: 60px;
+    height: 60px;
+}
 
 .fa-user-alt {
 	margin-right:4px;
@@ -221,6 +273,24 @@
 .instagram a {
 	margin-right: 5px;
 	margin-bottom: 5px;
+}
+
+.load-more {
+	background-color: rgb(149, 149, 149);
+	color: white;
+	height: 30px;
+	width: 125px;
+	text-transform:uppercase;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 13px;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 700;
+	border-radius: 2px;
+	margin-bottom:75px;
+	margin-top:75px;
+	text-decoration: none;
 }
 
 
