--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -6,7 +6,10 @@ $link-color: #2937f0;
 
 // TYPOGRAPHY START
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   margin: 0;
   line-height: 1.7em;
   letter-spacing: .03em;
@@ -21,11 +24,12 @@ h2 {
   font-weight: 300;
 }
 
-p, ul {
+p,
+ul {
   font-size: 2em;
   letter-spacing: .04em;
   line-height: 1.8;
-  margin: 0;
+  // margin: 0;
 }
 
 // TYPOGRAPHY END
@@ -35,18 +39,19 @@ p, ul {
 html {
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
-  font-size: 10px;
+  font-size: 13px;
 }
 
 body {
-  display: flex;
-  justify-content: center;
-  background-color: transparent;
-  font-size: 1.3em;
+  // font-size: 1.3em;
 }
 
 .wrapper {
   max-width: 1170px;
+  margin: 0 auto;
+  padding: 0px 15px;
+  display: flex;
+  flex-direction: column;
 }
 
 .row {
@@ -68,16 +73,11 @@ body {
 // HEADER START
 
 header {
-  height: 100vh;
   position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 
   #cube {
     position: absolute;
-    top: -36px;
-    right: 90px;
+    right: 8%;
   }
 
   #scroll {
@@ -87,9 +87,13 @@ header {
     transition: all 0.5s ease-in-out;
   }
 
+  .header-title {
+    margin-top: 100px;
+    margin-bottom: 100px;
+  }
+
   .header-name {
-    margin-top: 273px;
-    text-transform: uppercase;
+    //margin-bottom: 20px;
   }
 
 }
@@ -100,18 +104,19 @@ header {
 
 .about {
   .about-info {
-    width: 50%;
+    width: 100%;
+
     ul {
-      padding: 0;
       list-style: square;
+      padding-left: 23px;
     }
   }
 
   .about-photo {
     display: flex;
     flex-direction: column;
-    min-width: 320px;
-    width: 48%;
+    max-width: 500px;
+
     img {
       width: 100%;
       margin-bottom: 25px;
@@ -121,6 +126,7 @@ header {
 
   .about-sub {
     margin-top: 60px;
+
     a {
       text-decoration: none;
       color: $link-color;
@@ -129,7 +135,7 @@ header {
 
     a:hover {
       text-decoration: underline;
-      color:black;
+      color: black;
     }
   }
 }
@@ -142,49 +148,96 @@ header {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+}
 
-  .project-alone {
-    width: 49%;
-    margin-top: 5em;
-    margin-bottom: 5em;
-    min-width: 320px;
+.project-alone {
+  width: calc(50% - 20px);
+  text-decoration: none;
+  color: inherit;
+  margin: 3em 0;
+  position: relative;
+  padding: 0 0 20px;
+  box-sizing: border-box;
+  transition: color 0.3s;
 
-    .project-alone__image {
-      img {
-        width: 100%;
-      }
-    }
 
-    .project-alone__sub {
-      h3 {
-        font-size: 2.5em;
-        padding-top: 5%;
-        padding-left: 3%;
-        line-height: 1.1em; 
-
-      }
+  &:hover {
+    h3 {
+      color: $link-color;
+      transition: color 0.3s;
       
-      h4 {
-        font-size: 1.8em;
-        font-weight: 300;
-        padding-top: 3%;
-        padding-left: 3%;
-        line-height: 1.1em; 
-
-      }
-
-      p {
-        font-size: 1.1em;
-        color: #969696;
-        font-weight: 300;
-        font-style: italic;
-        padding-top: 2%;
-        padding-left: 3%;
+      &:after {
+        background-image: url('../img/link-hover.svg');
       }
     }
+
+    h4, p {
+      color: black;
+      transition: color 0.3s;
+    }
+  }
+}
+
+.project-alone__img {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.project-alone__sub {
+  h3 {
+    font-size: 2.5em;
+    line-height: 1.1em;
+    margin-bottom: 20px;
+    color: #000;
+    transition: color 0.3s;
+    display: flex;
+    align-items: center;
+    &:after {
+      content: '';
+      display: inline-block;
+      height: 26px;
+      width: 26px;
+      background-image: url('../img/link.svg');
+      background-size: contain;
+      margin-left: 10px;
+    }
+  }
+
+  h4 {
+    font-size: 1.8em;
+    font-weight: 300;
+    line-height: 1.1em;
+    color: #000;
+    transition: color 0.3s;
 
   }
 
+  p {
+    font-size: 1.1em;
+    color: #969696;
+    font-weight: 300;
+    font-style: italic;
+    margin-bottom: 0;
+    transition: color 0.3s;
+
+  }
+}
+
+.project-alone__go-to {
+  display: none;
+  position: absolute;
+  color: black;
+  justify-content: center;
+  width: 100%;
+  font-size: 30px;
+  line-height: 30px;
+  font-weight: 600;
+  top: calc(50% - 50px);
+
+  .right-arrow {
+    height: 100px;
+    margin-left: 10px;
+  }
 }
 
 // PROJECTS SECTION END
@@ -193,7 +246,47 @@ header {
 
 footer {
   margin-bottom: 4.3em;
+
+  a {
+    text-decoration: none;
+    color: #2937f0;
+    font-weight: 500;
+  }
 }
 
 // FOOTER END
 
+@media screen and (max-width: 910px) {
+  #cube {
+    display: none;
+  }
+
+  header .header-name {
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .project {
+    flex-direction: column;
+    align-items: center;
+
+    .project-alone {
+      width: 100%;
+    }
+  }
+
+
+}
+
+@media screen and (max-width: 390px) {
+
+  html {
+    font-size: 10px;
+  }
+
+  .about .about-info ul {
+    padding-left: 5%;
+  }
+
+}
