--- a/css/main.css
+++ b/css/main.css
@@ -94,7 +94,8 @@ header {
   position: relative;
   padding: 0 0 20px;
   box-sizing: border-box;
-  transition: color 0.3s; }
+  transition: color 0.3s;
+  overflow: hidden; }
   .project-alone:hover h3 {
     color: #2937f0;
     transition: color 0.3s; }
@@ -104,41 +105,81 @@ header {
     color: black;
     transition: color 0.3s; }
 
-.project-alone__img {
-  width: 100%;
+.project-alone__top {
+  position: relative;
   margin-bottom: 20px; }
 
-.project-alone__sub h3 {
-  font-size: 2.5em;
-  line-height: 1.1em;
-  margin-bottom: 20px;
-  color: #000;
-  transition: color 0.3s;
+#links-show {
+  cursor: pointer; }
+
+.links-active .project-alone__links {
+  top: 0;
+  transition: top 0.5s ease-out; }
+
+.project-alone__links {
+  position: absolute;
+  width: 100%;
+  background-color: #2d3bf0bd;
+  z-index: 20;
+  top: -105%;
+  transition: top 0.5s ease;
+  height: 100%;
   display: flex;
-  align-items: center; }
-  .project-alone__sub h3:after {
-    content: '';
-    display: inline-block;
-    height: 26px;
-    width: 26px;
-    background-image: url("../img/link.svg");
-    background-size: contain;
-    margin-left: 10px; }
+  align-items: center;
+  justify-content: center; }
+  .project-alone__links ul {
+    font-size: unset;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    line-height: unset; }
+  .project-alone__links li {
+    margin-bottom: 5px;
+    color: #fff; }
+  .project-alone__links a {
+    text-decoration: none;
+    font-size: 25px;
+    color: #fff;
+    transition: color 0.3s;
+    font-weight: 400; }
+    .project-alone__links a:hover {
+      color: #ff92fd;
+      transition: color 0.3s; }
 
-.project-alone__sub h4 {
-  font-size: 1.8em;
-  font-weight: 300;
-  line-height: 1.1em;
-  color: #000;
-  transition: color 0.3s; }
+.project-alone__img {
+  width: 100%; }
 
-.project-alone__sub p {
-  font-size: 1.1em;
-  color: #969696;
-  font-weight: 300;
-  font-style: italic;
-  margin-bottom: 0;
-  transition: color 0.3s; }
+.project-alone__sub {
+  position: relative; }
+  .project-alone__sub h3 {
+    font-size: 2.5em;
+    line-height: 1.1em;
+    margin-bottom: 20px;
+    color: #000;
+    transition: color 0.3s;
+    display: flex;
+    align-items: center; }
+    .project-alone__sub h3:after {
+      content: '';
+      display: inline-block;
+      height: 26px;
+      width: 26px;
+      background-image: url("../img/link.svg");
+      background-size: contain;
+      margin-left: 10px; }
+  .project-alone__sub h4 {
+    font-size: 1.8em;
+    font-weight: 300;
+    line-height: 1.1em;
+    color: #000;
+    transition: color 0.3s; }
+  .project-alone__sub p {
+    font-size: 1.1em;
+    color: #969696;
+    font-weight: 300;
+    font-style: italic;
+    margin-bottom: 0;
+    transition: color 0.3s; }
 
 .project-alone__go-to {
   display: none;
