--- a/css/main.css
+++ b/css/main.css
@@ -119,26 +119,35 @@ header {
 .project-alone__links {
   position: absolute;
   width: 100%;
+  height: 99%;
   background-color: #2d3bf0bd;
   z-index: 20;
   top: -105%;
   transition: top 0.5s ease;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center; }
+  overflow-y: auto; }
+  .project-alone__links::-webkit-scrollbar-thumb {
+    background-color: #fff; }
+  .project-alone__links::-webkit-scrollbar {
+    background-color: transparent;
+    margin-right: 5px;
+    border-right: 5px solid transparent; }
+  .project-alone__links::-webkit-scrollbar-track {
+    height: 50px; }
   .project-alone__links ul {
     font-size: unset;
     padding: 0;
     margin: 0;
     list-style: none;
-    line-height: unset; }
+    line-height: unset;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
   .project-alone__links li {
-    margin-bottom: 5px;
+    margin: 10px;
     color: #fff; }
   .project-alone__links a {
-    text-decoration: none;
-    font-size: 25px;
+    font-size: 2.5em;
     color: #fff;
     transition: color 0.3s;
     font-weight: 400; }
