Start is created new design portfolio

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,367 +1,33 @@
-// VARIABLES START 
+@import 'normalize';
+@import 'typography';
+@import 'header';
+@import 'preview';
 
-$link-color: #2937f0;
 
-// VARIABLES END 
-
-// TYPOGRAPHY START
-
-h1,
-h2,
-h3,
-h4 {
-  margin: 0;
-  line-height: 1.7em;
-  letter-spacing: .03em;
-}
-
-h1 {
-  font-size: 3.1em;
-}
-
-h2 {
-  font-size: 2em;
-  font-weight: 300;
-}
-
-p,
-ul {
-  font-size: 2em;
-  letter-spacing: .04em;
-  line-height: 1.8;
-  // margin: 0;
-}
-
-// TYPOGRAPHY END
-
-// Common Styles Start
-
-html {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 300;
-  font-size: 13px;
-}
+$link-color: #2937f0; 
 
 body {
-  // font-size: 1.3em;
-}
-
-.wrapper {
-  max-width: 1170px;
-  margin: 0 auto;
-  padding: 0px 15px;
-  display: flex;
-  flex-direction: column;
-}
-
-.row {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.hidden {
-  visibility: hidden;
-  opacity: 0;
-  filter: alpha(opacity=0);
-  transform: translateY(100%);
+  background-color: #ffffff;
 }
 
 
-// Common styles end
-
-// HEADER START
-
-header {
-  position: relative;
-
-  #cube {
-    position: absolute;
-    right: 8%;
-  }
-
-  #scroll {
-    position: absolute;
-    bottom: 20px;
-    right: 50%;
-    transition: all 0.5s ease-in-out;
-  }
-
-  .header-title {
-    margin-top: 100px;
-    margin-bottom: 100px;
-  }
-
-  .header-name {
-    //margin-bottom: 20px;
-  }
-
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
-// HEADER END 
-
-// ABOUT SECTION START
-
-.about {
-  .about-info {
-    width: 100%;
-
-    ul {
-      list-style: square;
-      padding-left: 23px;
-    }
-  }
-
-  .about-photo {
-    display: flex;
-    flex-direction: column;
-    max-width: 500px;
-
-    img {
-      width: 100%;
-      margin-bottom: 25px;
-    }
-
-  }
-
-  .about-sub {
-    margin-top: 60px;
-
-    a {
-      text-decoration: none;
-      color: $link-color;
-      font-weight: 500;
-    }
-
-    a:hover {
-      text-decoration: underline;
-      color: black;
-    }
-  }
-}
-
-// ABOUT SECTION END
-
-// PROJECTS SECTION START
-
-.project {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-
-.project-alone {
-  width: calc(50% - 20px);
+a {
   text-decoration: none;
   color: inherit;
-  margin: 3em 0;
-  position: relative;
-  padding: 0 0 20px;
-  box-sizing: border-box;
-  transition: color 0.3s;
-  overflow: hidden;
-
-
-  &:hover {
-    h3 {
-      color: $link-color;
-      transition: color 0.3s;
-
-      &:after {
-        background-image: url('../img/link-hover.svg');
-      }
-    }
-
-    h4, p {
-      color: black;
-      transition: color 0.3s;
-    }
-  }
 }
 
-.project-alone__top {
-  position: relative;
-  margin-bottom: 20px;
+.container {
+  max-width: 1160px;
+  margin: 0 auto;
+  padding: 0 2rem;
 }
 
-#links-show {
-  cursor: pointer;
-}
 
-.links-active {
-  .project-alone__links {
-    top: 0;
-    transition: top 0.5s ease-out;
-  }
-}
+@import 'media995';
 
-.project-alone__links {
-  position: absolute;
-  width: 100%;
-  height: 99%;
-  background-color: rgba(45, 59, 240, 0.7);
-  z-index: 20;
-  top: -105%;
-  transition: top 0.5s ease;
-  overflow-y: auto;
-
-  &::-webkit-scrollbar-thumb {
-    background-color: #fff;
-  }
-
-  &::-webkit-scrollbar {
-    background-color: transparent;
-    margin-right: 5px;
-    border-right: 5px solid transparent;
-  }
-
-  &::-webkit-scrollbar-track {
-    height: 50px;
-  }
-
-  ul {
-    font-size: unset;
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    line-height: unset;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  li {
-    margin: 10px;
-    color: #fff;
-  }
-
-  a {
-    font-size: 2.5em;
-    color: #fff;
-    transition: color 0.3s;
-    font-weight: 400;
-
-    &:hover {
-      color: #ff92fd;
-      transition: color 0.3s;
-    }
-  }
-}
-
-.project-alone__img {
-  width: 100%;
-}
-
-.project-alone__sub {
-  position: relative;
-
-  h3 {
-    font-size: 2.5em;
-    line-height: 1.1em;
-    margin-bottom: 20px;
-    color: #000;
-    transition: color 0.3s;
-    display: flex;
-    align-items: center;
-
-    &:after {
-      content: '';
-      display: inline-block;
-      height: 26px;
-      width: 26px;
-      background-image: url('../img/link.svg');
-      background-size: contain;
-      background-repeat: no-repeat;
-      margin-left: 10px;
-    }
-  }
-
-  h4 {
-    font-size: 1.8em;
-    font-weight: 300;
-    line-height: 1.1em;
-    color: #000;
-    transition: color 0.3s;
-
-  }
-
-  p {
-    font-size: 1.1em;
-    color: #969696;
-    font-weight: 300;
-    font-style: italic;
-    margin-bottom: 0;
-    transition: color 0.3s;
-
-  }
-}
-
-.project-alone__go-to {
-  display: none;
-  position: absolute;
-  color: black;
-  justify-content: center;
-  width: 100%;
-  font-size: 30px;
-  line-height: 30px;
-  font-weight: 600;
-  top: calc(50% - 50px);
-
-  .right-arrow {
-    height: 100px;
-    margin-left: 10px;
-  }
-}
-
-// PROJECTS SECTION END
-
-// FOOTER START
-
-footer {
-  margin-bottom: 4.3em;
-
-  a {
-    text-decoration: none;
-    color: #2937f0;
-    font-weight: 500;
-  }
-}
-
-// FOOTER END
-
-@media screen and (max-width: 910px) {
-  #cube {
-    display: none;
-  }
-
-  header .header-name {
-    margin: 0;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .project {
-    flex-direction: column;
-    align-items: center;
-
-    .project-alone {
-      width: 100%;
-    }
-  }
-
-
-}
-
-@media screen and (max-width: 390px) {
-
-  html {
-    font-size: 10px;
-  }
-
-  .about .about-info ul {
-    padding-left: 5%;
-  }
-
-}
