Another variant for pizza

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -6,6 +6,7 @@
   z-index: 100;
   background-color: #ffffff;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
+
   .container {
     display: flex;
     flex-direction: row;
@@ -17,16 +18,37 @@
 
 .nickname {
   font-size: 2rem;
+
+  &::after {
+    content: '.';
+  }
+}
+
+.header__left {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+
+  &:hover {
+    .header__logo {
+      transform: translateY(2px) rotate(360deg);
+      padding: 0;
+      transition:padding 0.3s , transform 1s;
+    }
+  }
 }
 
 .header__logo {
-  position: absolute;
+  padding-left: 25px;
+  box-sizing: border-box;
   left: calc(50% - 28px);
   height: 56px;
   width: 56px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  transform: translateY(2px) rotate(0deg);
+  transition: 0.3s;
 
   img {
     height: 50%;
@@ -38,9 +60,29 @@
 }
 
 .navbar__item {
-  margin-right: 30px;
   font-size: 2rem;
   text-transform: lowercase;
+  position: relative;
+
+  a {
+    padding: 10px 15px;
+
+    &:before {
+      // position: absolute;
+      // left: 10px;
+      content: '.';
+      opacity: 1;
+      transition: 0.4s;
+    }
+
+    &:hover::before {
+      opacity: 0;
+      transition: 0.4s;
+    }
+  }
+
+
+
 
   &:last-child {
     margin-right: 0;
