--- a/app/css/main.css
+++ b/app/css/main.css
@@ -445,9 +445,34 @@ html {
 
 .nickname {
   font-size: 2rem; }
+  .nickname::after {
+    content: '.'; }
+
+.header__left {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer; }
+  .header__left:hover .header__logo {
+    -webkit-transform: translateY(2px) rotate(360deg);
+        -ms-transform: translateY(2px) rotate(360deg);
+            transform: translateY(2px) rotate(360deg);
+    padding: 0;
+    -webkit-transition: padding 0.3s , -webkit-transform 1s;
+    transition: padding 0.3s , -webkit-transform 1s;
+    -o-transition: padding 0.3s , transform 1s;
+    transition: padding 0.3s , transform 1s;
+    transition: padding 0.3s , transform 1s , -webkit-transform 1s; }
 
 .header__logo {
-  position: absolute;
+  padding-left: 25px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   left: -webkit-calc(50% - 28px);
   left: calc(50% - 28px);
   height: 56px;
@@ -463,7 +488,13 @@ html {
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
-          justify-content: space-between; }
+          justify-content: space-between;
+  -webkit-transform: translateY(2px) rotate(0deg);
+      -ms-transform: translateY(2px) rotate(0deg);
+          transform: translateY(2px) rotate(0deg);
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s; }
   .header__logo img {
     height: 50%; }
 
@@ -474,9 +505,22 @@ html {
   display: flex; }
 
 .navbar__item {
-  margin-right: 30px;
   font-size: 2rem;
-  text-transform: lowercase; }
+  text-transform: lowercase;
+  position: relative; }
+  .navbar__item a {
+    padding: 10px 15px; }
+    .navbar__item a:before {
+      content: '.';
+      opacity: 1;
+      -webkit-transition: 0.4s;
+      -o-transition: 0.4s;
+      transition: 0.4s; }
+    .navbar__item a:hover::before {
+      opacity: 0;
+      -webkit-transition: 0.4s;
+      -o-transition: 0.4s;
+      transition: 0.4s; }
   .navbar__item:last-child {
     margin-right: 0; }
 
@@ -496,7 +540,10 @@ html {
           justify-content: space-between;
   -webkit-flex-wrap: wrap;
       -ms-flex-wrap: wrap;
-          flex-wrap: wrap; }
+          flex-wrap: wrap;
+  padding-top: 70px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
 
 .title__nickname {
   font-size: 6rem;
@@ -504,10 +551,10 @@ html {
   overflow: hidden; }
 
 .nick-left {
-  margin-right: 180px; }
+  margin-right: 142px; }
 
 .nick-numbers {
-  left: 160px;
+  left: 140px;
   top: 0;
   height: 6rem;
   text-align: center;
@@ -518,7 +565,19 @@ html {
 .pizza {
   position: relative;
   height: 400px;
-  width: 400px; }
+  width: 400px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
   .pizza img {
     height: 200px;
     position: absolute; }
@@ -585,6 +644,9 @@ html {
     right: 83px;
     top: 214px; }
 
+.about {
+  text-align: center; }
+
 body {
   background-color: #ffffff; }
 
@@ -607,6 +669,9 @@ a {
     -webkit-box-pack: center;
     -webkit-justify-content: center;
         -ms-flex-pack: center;
-            justify-content: center; }
-  .title {
-    margin-top: 30%; } }
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; } }
